Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is ahead of 'origin/main' by 2 commits.
  (use "git push" to publish your local commits)

Changes to be committed:
	modified:   README.md
	new file:   docs/API.md
	new file:   examples/app.js
	new file:   examples/index.html
	new file:   examples/views/device.html
	new file:   examples/views/home.html
	new file:   examples/views/more.html
	new file:   examples/views/state.html
	new file:   examples/views/touch.html
	modified:   package.json
	modified:   rollup.config.js
	modified:   src/core/animation.js
	modified:   src/core/index.js
	modified:   src/core/loader.js
	modified:   src/core/touch.js
	modified:   src/modules/overlays/overlays.js
	new file:   src/modules/overlays/overlays.scss
	new file:   src/styles/abstracts/_index.scss
	modified:   src/styles/abstracts/_variables.scss
	new file:   src/styles/base/_icons.scss
	modified:   src/styles/base/_mobile.scss
	modified:   src/styles/base/_typography.scss
	modified:   src/styles/catui-mobile.scss
	modified:   src/styles/components/_pull-to-refresh.scss
	modified:   src/styles/components/_touch.scss
	new file:   src/styles/examples/_examples.scss

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "style": "dist/catui-mobile.css",
   "scripts": {
     "dev": "rollup -c -w",
-    "build": "set NODE_ENV=production && rollup -c && npm run build:css",
+    "build": "set NODE_ENV=production && rollup -c && npm run build:css && npm run copy:fonts",
+    "copy:fonts": "xcopy src\\fonts\\*.woff2 dist\\fonts\\ /Y /I 2>nul || mkdir dist\\fonts && copy src\\fonts\\*.woff2 dist\\fonts\\",
     "build:core": "rollup -c --environment BUILD:core",
     "build:modules": "rollup -c --environment BUILD:modules",
-    "build:css": "sass src/styles/catui-mobile.scss dist/catui-mobile.css --style compressed --no-source-map",
+    "build:css": "sass src/styles/catui-mobile.scss dist/catui-mobile.css --style compressed --no-source-map && npm run build:css:modules",
+    "build:css:modules": "sass src/modules/overlays/overlays.scss dist/modules/overlays/overlays.css --style compressed --no-source-map",
     "build:css:min": "sass src/styles/catui-mobile.scss dist/catui-mobile.min.css --style compressed",
     "minify": "terser dist/catui-mobile.js -o dist/catui-mobile.min.js --compress --mangle",
     "clean": "rimraf dist",
