Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	renamed:    .eslintrc.js -> .eslintrc.cjs
	new file:   CHANGELOG.md
	modified:   package.json
	modified:   src/core/animation.js
	modified:   src/core/api.js
	modified:   src/core/dom.js
	modified:   src/core/event.js
	modified:   src/core/form.js
	modified:   src/core/index.js
	modified:   src/core/loader.js
	modified:   src/core/loading.js
	modified:   src/core/router.js
	modified:   src/core/security.js
	modified:   src/core/state.js
	modified:   src/core/storage.js
	modified:   src/core/template.js
	modified:   src/core/touch.js
	modified:   src/core/url.js
	modified:   src/core/utils.js
	modified:   src/core/viewport.js
	modified:   src/modules/auth/auth.js
	modified:   src/modules/calendar/calendar.js
	modified:   src/modules/carousel/carousel.js
	modified:   src/modules/feedback/feedback.js
	modified:   src/modules/forms/forms.js
	modified:   src/modules/list/list.js
	modified:   src/modules/media/media.js
	modified:   src/modules/navigation/navigation.js
	modified:   src/modules/onboarding/onboarding.js
	modified:   src/modules/overlays/overlays.js
	modified:   src/modules/pagination/pagination.js
	modified:   src/modules/payment/payment.js
	modified:   src/modules/pickers/pickers.js
	modified:   src/modules/scroll/scroll.js
	modified:   src/modules/search/search.js
	modified:   src/modules/selectors/selectors.js
	modified:   src/modules/social/social.js
	modified:   src/modules/theme/theme.js
	modified:   src/modules/wordcloud/wordcloud.js

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@imcat-ckim/catui-mobile",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Mobile-first, touch-optimized UI framework based on IMCAT UI core with gesture support and mobile-native components",
   "homepage": "https://imcat.dev/mobile",
   "type": "module",
@@ -26,7 +26,13 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "serve": "http-server . -p 3001 -o",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "jsdoc -c jsdoc.json",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:major": "npm version major --no-git-tag-version",
+    "prerelease": "npm run lint && npm run build",
+    "release": "npm run prerelease && npm publish",
+    "release:dry": "npm run prerelease && npm publish --dry-run"
   },
   "keywords": [
     "mobile",
