--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
     "version:major": "npm version major --no-git-tag-version",
-    "prerelease": "npm run lint && npm run build",
+    "zip": "powershell Compress-Archive -Path dist/* -DestinationPath catui-mobile-dist.zip -Force",
+    "prerelease": "npm run lint && npm run build && npm run zip",
     "release": "npm run prerelease && npm publish",
     "release:dry": "npm run prerelease && npm publish --dry-run"
   },
